feat: LottosBundleGenerator 구현 - 컴포지트 패턴: ManualLottoGenerator와 AutoLottoGenerator의 묶음 - LottoPurchase의 역할 축소 (금액과 수동리스트만 받아서 전체 로또 생성역할) - 수동/자동 생성의 역할은 LottosBundleGenerator에게 위임